--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ weather.api.key=4d4a7724f36cc4dacf787e3508eafad4
 hue.api.key=6zEFevFdVfUPlq9yES2AXmM2IDHOque5MKN-DF8Z
 hue.bridge.ip=192.168.0.155
 hue.api.url=http://{HUE_BRIDGE_IP}/api/{API_KEY}
-spring.datasource.url=jdbc:mysql://localhost:3306/houseplants
-spring.datasource.username=root
-spring.datasource.password=qWerty15!
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/houseplants
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+#spring.jpa.show-sql: true
