app now integrated another properties which is only local due to secrets / passwords

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.additional-location=application-dev.properties
 weather.api.url=http://api.openweathermap.org/data/2.5/weather?q={city}&appid={apiKey}&units=metric
 hue.api.url=http://{HUE_BRIDGE_IP}/api/{API_KEY}
 spring.jpa.hibernate.ddl-auto=update
