--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>weather-app</description>
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
     </properties>
     <dependencies>
         <dependency>
