--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ hue.api.url=http://{HUE_BRIDGE_IP}/api/{API_KEY}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/houseplants
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 #spring.jpa.show-sql: true
