--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/houseplants
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+upload.directory=src/main/resources/static/planespotting/images/
 #spring.jpa.show-sql: true
