--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 upload.directory=src/main/resources/static/planespotting/images/
+capture.directory=src/main/resources/static/captures/
 server.port=9090
 #spring.jpa.show-sql: true
