--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,9 @@
     <name>weather-app</name>
     <description>weather-app</description>
     <properties>
-        <maven.compiler.target>18</maven.compiler.target>
-        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
         <dependency>
