--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 weather.api.url=http://api.openweathermap.org/data/2.5/weather?q={city}&appid={apiKey}&units=metric
 hue.api.url=http://{HUE_BRIDGE_IP}/api/{API_KEY}
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/smarthome
+spring.datasource.url=jdbc:mysql://192.168.178.30:3306/smarthome
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
