--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
             <artifactId>jasypt-spring-boot</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
